Tue Feb 22 18:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Upcall_Command.h:
          Added forward declaration CORBA::Environment

Tue Feb 22 18:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_BaseS.h:
          Removed includes which I should have removed after regenerating
          this file

Tue Feb 22 18:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp:
          Fixed compile error due to TAO_Server_Request interface change

Tue Feb 22 07:57:53 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/PortableServer/Upcall_Wrapper.h:

	  Added missing "tao/Environment.h" #include.

Tue Feb 22 07:31:33 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_root/root.cpp (visit_root):

	  Do not generate argument selection function templates if
	  unconstrained were not seen in the IDL.  Addresses build
	  problems for skeletons corresponding such IDL files.  Thanks to
	  Johnny for pointing out the problem.

Tue Feb 22 15:21:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Non_Servant_Upcall.{h,cpp,inl}:
        * tao/PortableServer/POA_Current_Impl.h:
          Added :: before TAO_Root_POA to fix compile errors with Sun Forte

Tue Feb 22 15:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Servant_Upcall.{h,cpp,inl}:
          Added :: before TAO_Root_POA to fix compile errors with Sun Forte

Tue Feb 22 15:00:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/POA_Current_Impl.{h,cpp,inl}:
          Added :: before TAO_Root_POA to fix compile errors with Sun Forte

Tue Feb 22 14:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp: